app/ip-country-lookup/manifests/deployment.yaml
---
# Source: ip-country-lookup/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urumia-ac-ip-country-lookup
  labels:
    app.kubernetes.io/name: ip-country-lookup
    app.kubernetes.io/instance: urumia-ac
    app.kubernetes.io/version: "0.1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ip-country-lookup
      app.kubernetes.io/instance: urumia-ac
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ip-country-lookup
        app.kubernetes.io/instance: urumia-ac
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: ip-country-lookup
          securityContext:
            {}
          image: "registry-9599bb66cc-k3s-stg.apps.ir-central1.arvancaas.ir/ip-country:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /metrics
              port: http
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: http
            # initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /metrics
              port: http
            # initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              cpu: 150m
              memory: 300Mi
            requests:
              cpu: 150m
              memory: 300Mi
